'Upgraded to Vert.x 5.1.6, changed to new vert.x gRPC service'